--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ author:
   semantic         : # URL
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : "https://www.researchgate.net/profile/Luigi-Roberti"
-  scopus           : # URL
+  scopus           : "https://www.scopus.com/authid/detail.uri?authorId=57218343207"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
