--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ repository               : "luigi-roberti/luigi-roberti.github.io"
 author:
   # Biographic information
   avatar           : "profile.jpg"
-  name             : Luigi Roberti
+  name             : "Luigi Roberti"
   pronouns         : # example: "she/her"  
   bio              : # "Short biography for the left-hand sidebar"
   employer         : # "Leibniz Universität Hannover"
