--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Luigi Roberti"
   pronouns         : # example: "she/her"  
-  bio              : # "Short biography for the left-hand sidebar"
+  bio              : " "# "Short biography for the left-hand sidebar"
   employer         : # "Leibniz Universität Hannover"
   location         : # "Welfengarten 1, 30167 Hannover, Room C405"
   uri              : # URL
