--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default" # Currently available options are "default"
 title                    : "Luigi Roberti"
 title_separator          : "-"
 name                     : &name "Luigi Roberti"
-description              : &description "Luigi Roberti's personal webpage"   # Update this with a general description of your site, this is the default if not overridden by a page
+description              : &description "Luigi Roberti's webpage"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://luigi-roberti.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
